# Dossier

./: .gitignore  README  README.md  main.cpp
db/: db.mwb  db.mwb.bak  dossier_setup.sql
include/: _ssl.h  authenticate.h  config.h  database.h  err.h  file.h  log.h  main.h  move_by_copy.h  proc.h  proxy.h  server.h  sql_connect.h  stream.h  thread_pool.h  thread_t.h
include/client/: args.h  main.h
include/database/: database.h  sql_connect.h
include/file/: _ssl.h  file.h  stream.h
include/server/: config.h  main.h  proxy.h  server.h
src/: CMakeLists.txt  Makefile  _ssl.cpp  authenticate.cpp  config.cpp  database.cpp  dossier  dossier.conf  dossier.service  err.cpp  file_stream.cpp  local_stream.cpp  log.cpp  main.cpp  proc.cpp  proxy.cpp  server.cpp  sql_connect.cpp  ssl_stream.cpp
src/client/: client.cpp  main.cpp
src/client/company/: add.cpp  del.cpp  list.cpp
src/client/doc/: download.cpp  remove.cpp  search.cpp  upload.cpp
src/database/: database.cpp  sql_connect.cpp
src/file/: _ssl.cpp  file_stream.cpp  log.cpp  ssl_stream.cpp
src/server/: config.cpp  main.cpp  proxy.cpp  server.cpp
src/test/: dossier.conf  test.cpp  test.sql  test_client.crt  test_client.csr  test_client.key  test_server.crt  test_server.key
